--- a/TestMaven(Duplicate)/test-output/index.html
+++ b/TestMaven(Duplicate)/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>F:\ellips workspace\TestMaven\testng.xml</span>
+                    <span>C:\Users\Dev\git\devgit\TestMaven(Duplicate)\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -153,7 +153,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\ellips workspace\TestMaven\testng.xml</span>
+            <span class="header-content">C:\Users\Dev\git\devgit\TestMaven(Duplicate)\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -206,16 +206,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TC2')
 data.setCell(0, 2, 'com.abc.orageHRM.Test.LoginPageTest')
-data.setCell(0, 3, 3300);
+data.setCell(0, 3, 2776);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'TC1')
 data.setCell(1, 2, 'com.abc.orageHRM.Test.LoginPageTest')
-data.setCell(1, 3, 2860);
+data.setCell(1, 3, 2612);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -248,27 +248,27 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">Report</span>
-                <span class="method-start">9837 ms</span>
+                <span class="method-start">9827 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-test before">
                 <span class="method-name">ExcelConnect</span>
-                <span class="method-start">10031 ms</span>
+                <span class="method-start">10028 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TC1</span>
-                <span class="method-start">10978 ms</span>
+                <span class="method-start">10859 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">TC2</span>
-                <span class="method-start">13854 ms</span>
+                <span class="method-start">13487 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">endTest</span>
-                <span class="method-start">17169 ms</span>
+                <span class="method-start">16279 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">BrowserEnd</span>
-                <span class="method-start">17510 ms</span>
+                <span class="method-start">16651 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
